# MiniCloud

./: .gitignore
minicloud-control-plane/: README.md
minicloud-control-plane/apps/cloudwatch-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
minicloud-control-plane/apps/cloudwatch-service/alembic/: env.py
minicloud-control-plane/apps/cloudwatch-service/alembic/versions/: 0001_initial_cloudwatch.py
minicloud-control-plane/apps/cloudwatch-service/app/: main.py
minicloud-control-plane/apps/cloudwatch-service/app/api/: alarms.py  audit.py  events.py  log_groups.py  log_streams.py  logs.py  metrics.py
minicloud-control-plane/apps/cloudwatch-service/app/clients/: iam_client.py
minicloud-control-plane/apps/cloudwatch-service/app/core/: auth.py  config.py  errors.py  pagination.py  resource_ids.py  time.py
minicloud-control-plane/apps/cloudwatch-service/app/db/: base.py  session.py
minicloud-control-plane/apps/cloudwatch-service/app/engine/: alarm_evaluator.py  event_router.py  log_normalizer.py  metric_aggregator.py  retention.py
minicloud-control-plane/apps/cloudwatch-service/app/models/: __init__.py  alarm.py  audit_event.py  event.py  log_event.py  log_group.py  log_stream.py  metric.py
minicloud-control-plane/apps/cloudwatch-service/app/repositories/: alarms_repo.py  audit_repo.py  events_repo.py  logs_repo.py  metrics_repo.py
minicloud-control-plane/apps/iam-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
minicloud-control-plane/apps/iam-service/alembic/: env.py
minicloud-control-plane/apps/iam-service/app/: main.py
(+55 files in other folders)
